# TCC

./: CMakeLists.txt  LICENSE.md  README.md
cmake/: AddGoogleTest.cmake  DownloadProject.cmake
docs/: CMakeLists.txt  Doxyfile.in
include/: algorithm.hpp  data_structure.hpp  functional.hpp  memory.hpp  meta.hpp
include/algorithm/: absolute_difference.hpp  algorithm.hpp  all.hpp  distance.hpp  iter_swap.hpp  log.h  mean.hpp  partition.hpp
include/algorithm/internal/: absolute_difference.hpp  log.h  mean.hpp
include/data_structure/: all.hpp  bitmapped_vector_trie.hpp  functional_bitmapped_vector_trie.hpp
include/data_structure/multidimensional/: array_kd_tree.hpp  compact_kd_tree.hpp  dimensional_traits.hpp  kd_tree.hpp  leaf_kd_tree.hpp  quad_tree.hpp  shapes.hpp
include/data_structure/multidimensional/internal/: free_list.hpp
include/data_structure/primitives/: small_vector.hpp  static_vector.hpp
include/data_structure/utils/: log.h  mean.hpp
include/functional/: all.hpp  optional.hpp  traits.hpp
include/geometricks/: data_structure.hpp  meta.hpp
include/geometricks/algorithm/: absolute_difference.hpp  iter_swap.hpp  log.h  partition.hpp
include/geometricks/data_structure/: all.hpp  array_kd_tree.hpp  dimensional_traits.hpp  kd_tree.hpp  leaf_kd_tree.hpp  quad_tree.hpp  rtree.hpp  shapes.hpp
include/geometricks/data_structure/internal/: free_list.hpp  small_vector.hpp  static_vector.hpp  utils.hpp
include/geometricks/memory/: all.hpp  allocator.hpp
include/geometricks/memory/allocator/: malloc_allocator.hpp  new_allocator.hpp  pool_allocator.hpp
include/geometricks/meta/: all.hpp  conditional_constructors.hpp  list.hpp  utils.hpp
include/memory/: all.hpp  allocator.hpp  reference_count.hpp
include/memory/allocator/: allocator_base.hpp  malloc_allocator.hpp  pool_allocator.hpp  type_erased_allocator.hpp
include/meta/: all.hpp  conditional_constructors.hpp  detect.hpp  list.hpp  literals.hpp  meta.hpp  utils.hpp
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  test_absolute_difference.cpp  test_log.cpp  test_mean.cpp  test_partition.cpp
tests/data_structure/: CMakeLists.txt  test_array_kd_tree.cpp  test_bitmapped_vector_trie.cpp  test_kd_tree.cpp  test_leaf_kd_tree.cpp  test_quad_tree.cpp  test_r_tree.cpp  test_rectangle.cpp
tests/data_structure/internal/: CMakeLists.txt  test_free_list.cpp  test_small_vector.cpp  test_static_vector.cpp
tests/data_structure/multidimensional/: CMakeLists.txt  test_array_kd_tree.cpp  test_compact_kd_tree.cpp  test_kd_tree.cpp  test_leaf_kd_tree.cpp  test_quad_tree.cpp  test_r_tree.cpp  test_rectangle.cpp
tests/data_structure/multidimensional/internal/: CMakeLists.txt  test_free_list.cpp
tests/data_structure/primitives/: CMakeLists.txt  test_small_vector.cpp  test_static_vector.cpp
tests/data_structure/utils/: CMakeLists.txt  test_log.cpp  test_mean.cpp
tests/functional/: CMakeLists.txt  test_optional.cpp
tests/memory/: CMakeLists.txt  test_reference_count.cpp
tests/memory/allocator/: CMakeLists.txt  test_allocator.cpp  test_malloc_allocator.cpp  test_new_allocator.cpp  test_pool_allocator.cpp  test_type_erasure_allocator.cpp
