add_executable( TestLog test_log.cpp )
target_link_libraries( TestLog gtest gmock gtest_main TCCAlgorithm )
target_compile_options( TestLog PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestLog COMMAND TestLog )
add_executable( TestMean test_mean.cpp )
target_link_libraries( TestMean gtest gmock gtest_main TCCAlgorithm )
target_compile_options( TestMean PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestMean COMMAND TestMean )
add_executable( TestPartition test_partition.cpp )
target_link_libraries( TestPartition gtest gmock gtest_main TCCAlgorithm )
target_compile_options( TestPartition PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestPartition COMMAND TestPartition )
add_executable( TestAbsoluteDifference test_absolute_difference.cpp )
target_link_libraries( TestAbsoluteDifference gtest gmock gtest_main TCCAlgorithm )
target_compile_options( TestAbsoluteDifference PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestAbsoluteDifference COMMAND TestAbsoluteDifference )
