add_subdirectory( internal )
add_executable( TestLeafKDTree test_leaf_kd_tree.cpp )
target_link_libraries( TestLeafKDTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestLeafKDTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestLeafKDTree COMMAND TestLeafKDTree )
add_executable( TestQuadTree test_quad_tree.cpp )
target_link_libraries( TestQuadTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestQuadTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestQuadTree COMMAND TestQuadTree )
add_executable( TestRectangle test_rectangle.cpp )
target_link_libraries( TestRectangle gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestRectangle PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestRectangle COMMAND TestRectangle )
add_executable( TestArrayKDTree test_array_kd_tree.cpp )
target_link_libraries( TestArrayKDTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestArrayKDTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestArrayKDTree COMMAND TestArrayKDTree )
add_executable( TestRTree test_r_tree.cpp )
target_link_libraries( TestRTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestRTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestRTree COMMAND TestRTree )
