add_subdirectory( internal )
add_executable( TestQuadTree test_quad_tree.cpp )
target_link_libraries( TestQuadTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestQuadTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestQuadTree COMMAND TestQuadTree )
add_executable( TestRectangle test_rectangle.cpp )
target_link_libraries( TestRectangle gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestRectangle PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestRectangle COMMAND TestRectangle )
add_executable( TestKDTree test_kd_tree.cpp )
target_link_libraries( TestKDTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestKDTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestKDTree COMMAND TestKDTree )
add_executable( TestRTree test_r_tree.cpp )
target_link_libraries( TestRTree gtest gmock gtest_main GeometricksDataStructure )
target_compile_options( TestRTree PRIVATE -Werror -Wall -Wextra )
gtest_discover_tests( TestRTree COMMAND TestRTree )
