add_subdirectory( internal )
add_executable( TestKDTree test_kd_tree.cpp )
target_link_libraries( TestKDTree gtest gmock gtest_main TCCDataStructure )
gtest_discover_tests( TestKDTree COMMAND TestKDTree )
add_executable( TestQuadTree test_quad_tree.cpp )
target_link_libraries( TestQuadTree gtest gmock gtest_main TCCDataStructure )
gtest_discover_tests( TestQuadTree COMMAND TestQuadTree )
add_executable( TestRectangle test_rectangle.cpp )
target_link_libraries( TestRectangle gtest gmock gtest_main TCCDataStructure )
gtest_discover_tests( TestRectangle COMMAND TestRectangle )
